# AD_Formulae_Validator

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: AlignedBox.h.6156C19705620A79.idx  AngleAxis.h.FF60095625B87602.idx  ArithmeticSequence.h.5BD60E2043DF41A3.idx  Array.h.735E205064556D59.idx  ArrayBase.h.8B026A6AB7B34E52.idx  ArrayCwiseBinaryOps.inc.8370B16CFB2D9BF4.idx  ArrayCwiseUnaryOps.inc.179904A899E9CFFA.idx  ArrayWrapper.h.C7DB23BF653492AC.idx  Assert.h.A9BD6686261153EC.idx  Assign.h.9E640ACFBFADB84D.idx  AssignEvaluator.h.E60AB0A7B095BE18.idx  AssignmentFunctors.h.100C3E0704E0839A.idx  BDCSVD.h.03EE3A635B4A8BE5.idx  BFloat16.h.7B66D61B797798A5.idx  BandMatrix.h.8CC6900F5BAC7E03.idx  BinaryFunctors.h.16FC6F4414662DC0.idx  BlasUtil.h.37DA9E4606047195.idx  Block.h.F04C8B1B5AD753F6.idx  BlockHouseholder.h.B06D951F73CEE17D.idx  BlockMethods.inc.4D7C830E14E238B7.idx  Cholesky.1D22CB2A6B83C7E9.idx  CommaInitializer.h.4B8EF26DA34102FD.idx  (+225 more)
generator/: configManager.cpp  configManager.h  configs.txt  formulaDriver.cpp  generator.cpp  generator.h  structures.h  tangentGenerator.cpp  types.h  utils.cpp  utils.h
include/ad/: ad.h
lighthouse/: F.h  ad_types.h  types.h
lighthouse/1/: fd.h  va.cpp  va.h  vt.h
lighthouse/2/: vasa.cpp  vasa.h  vast.cpp  vast.h  vava.cpp  vava.h  vavt.cpp  vavt.h  vtva.cpp  vtva.h  vtvt.cpp  vtvt.h
lighthouse/3/: vasasa.cpp  vasasa.h  vasast.cpp  vasast.h  vastsa.cpp  vastsa.h  vastst.cpp  vastst.h  vtvasa.cpp  vtvasa.h  vtvast.cpp  vtvast.h  vtvtva.cpp  vtvtva.h  vtvtvt.cpp  vtvtvt.h
lighthouse/4/: vtvtvtvt.cpp  vtvtvtvt.h
